--- a/PrincipalComponentAnalysis(PCA).ipynb
+++ b/PrincipalComponentAnalysis(PCA).ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "source": [
     "# PCA \n",
-    "1. PCA is a method for dimensionality reduction. It is an form of unsupervised technique, that is used as pre-processing step  when the dimension(features vectors) are big. \n",
+    "1. PCA is a method for dimensionality reduction. It is a form of unsupervised technique, that is used as pre-processing step  when the dimension(features vectors) are big. \n",
     "<br>\n",
     "2. Data with higher dimensions has often the problem of overfitting. Therefore, the model won't be able to produce generalize form except in training set.\n",
     "<br>\n",
-    "3. The calulated PCA are the vectors, where the frist PCA vectors has highest amount of variance and is orthognal to the second one. The  dimension of PCA vectors is equal to the dimension of the features vector in the data. \n",
+    "3. The calculated PCA are the vectors, where the frist PCA vectors has highest amount of variance and is orthognal to the second one. The  dimension of PCA vectors is equal to the dimension of the features vector in the data. \n",
     "\n",
     "\\begin{equation}\n",
     "\\text{Variation or spreading of the data}:  variance = \\frac{1}{N} \\sum(X_i - X_{mean})^{2} \n",
